--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-PROJECT(conangflags)
+PROJECT(conancurlcpp)
 cmake_minimum_required(VERSION 2.8)
 include(conanbuildinfo.cmake)
 CONAN_BASIC_SETUP()
