--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -4,17 +4,7 @@ PROJECT(MyHello)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 CONAN_BASIC_SETUP()
 
-include(CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-if(COMPILER_SUPPORTS_CXX11)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-elseif(COMPILER_SUPPORTS_CXX0X)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-else()
-        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
-endif()
+include(../cmake/detect.cpp11.cmake)
 
 ADD_EXECUTABLE(mytest test.cpp)
 TARGET_LINK_LIBRARIES(mytest ${CONAN_LIBS})
-set_property(TARGET mytest PROPERTY CXX_STANDARD 11)
