--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ env:
     - CONAN_STABLE_BRANCH_PATTERN="release/*"
 
   matrix:
-    - CONAN_GCC_VERSIONS=4.6 CONAN_USE_DOCKER=1
+    # GCC 4.6 is unsupported due to improper
+    # C++11 implementation.
+    #- CONAN_GCC_VERSIONS=4.6 CONAN_USE_DOCKER=1
     - CONAN_GCC_VERSIONS=4.8 CONAN_USE_DOCKER=1
     - CONAN_GCC_VERSIONS=4.9 CONAN_USE_DOCKER=1 
     - CONAN_GCC_VERSIONS=5.2 CONAN_USE_DOCKER=1
