--- a/.travis.yml
+++ b/.travis.yml
@@ -23,28 +23,30 @@ env:
     - CONAN_GCC_VERSIONS=5.3 CONAN_USE_DOCKER=1
     - CONAN_GCC_VERSIONS=5.4 CONAN_USE_DOCKER=1
     - CONAN_GCC_VERSIONS=6.2 CONAN_USE_DOCKER=1
-matrix:
-   include:
-       - os: osx 
-         osx_image: xcode8 # apple-clang 8
-         language: generic
-         env:
-       - os: osx 
-         osx_image: xcode7.3 # apple-clang 7.3
-         language: generic
-         env:
-       - os: osx 
-         osx_image: xcode7.1 # apple-clang 7.0
-         language: generic
-         env:
-       - os: osx
-         osx_image: xcode6.4 # apple-clang 6.1
-         language: generic
-         env:
-       - os: osx 
-         osx_image: xcode6.2 # apple-clang 6.0
-         language: generic
-         env:
+
+# Remove OSx builds due to linking issues (libcurl, libssh2).
+#matrix:
+   #include:
+       #- os: osx 
+         #osx_image: xcode8 # apple-clang 8
+         #language: generic
+         #env:
+       #- os: osx 
+         #osx_image: xcode7.3 # apple-clang 7.3
+         #language: generic
+         #env:
+       #- os: osx 
+         #osx_image: xcode7.1 # apple-clang 7.0
+         #language: generic
+         #env:
+       #- os: osx
+         #osx_image: xcode6.4 # apple-clang 6.1
+         #language: generic
+         #env:
+       #- os: osx 
+         #osx_image: xcode6.2 # apple-clang 6.0
+         #language: generic
+         #env:
 
 install:
   - ./.travis/install.sh
