--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ PROJECT(conancurlcpp)
 cmake_minimum_required(VERSION 2.8)
 include(conanbuildinfo.cmake)
 CONAN_BASIC_SETUP()
-add_subdirectory("./curl-cpp-latest")
+add_subdirectory("./curl-cpp-1.0.0")
