--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ language: python
 env:
   global:
     - CONAN_UPLOAD=1
-    - CONAN_REFERENCE="curl-cpp/latest"
+    - CONAN_REFERENCE="curl-cpp/1.0.0"
     - CONAN_USERNAME="eliaskousk"
     - CONAN_CHANNEL="stable"
     - CONAN_TOTAL_PAGES=1
